# bazel-sandbox

./: .gitignore  README.md
02_toolchain/: MODULE.bazel
03_rules_cc_toolchain/toolchain/: BUILD.bazel
03_vendored_toolchain/: .bazelrc  MODULE.bazel
03_vendored_toolchain/toolchain/: BUILD.bazel
basic/: README.md
toolchain/: BUILD.bazel
toolchain/toolchain/: BUILD.bazel  cc_toolchain_config.bzl
