bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

register_toolchains(
    "//toolchain:linux_x86_64_toolchain",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "linux_x86_64_cc_tools",
    build_file_content = """exports_files(glob(["**"]))\n""",
    url = "https://github.com/Ahajha/bazel-sandbox/releases/download/0.0.1/tools.tar.gz",
    integrity = "sha256-ZbY6833WmpPcmj6Tq161M7c7PA+jt9whIqdRCUNWD0Y=",
)

http_archive(
    name = "linux_x86_64_sysroot",
    url = "https://github.com/Ahajha/bazel-sandbox/releases/download/0.0.1/sysroot-focal-x86_64.tar.xz",
    integrity = "sha256-sYrXSw05e+dSZQGzzycnnRaNK1+y4i1YipE+V+BNtyM=",
)
