# TODO: The tutorial only works with the built-in rules.
# Update this to use the latest rules_cc

load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")
load("@rules_cc//cc/toolchains:toolchain.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

cc_tool(
    name = "clang",
    src = "@host_tools/usr/bin/clang",
)

cc_tool(
    name = "ld",
    src = "/usr/bin/ld",
)

cc_tool(
    name = "ar",
    src = "/usr/bin/ar",
)

cc_tool(
    name = "clang++",
    src = "/usr/bin/clang++",
)

cc_tool_map(
    name = "tool_map",
    tags = ["manual"],
    tools = {
        "@rules_cc//cc/toolchains/actions:assembly_actions": ":clang",
        "@rules_cc//cc/toolchains/actions:c_compile": ":clang",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":clang++",
        "@rules_cc//cc/toolchains/actions:link_actions": ":ld",
        "@rules_cc//cc/toolchains/actions:ar_actions": ":ar",
    },
    visibility = ["//visibility:private"],
)

filegroup(name = "empty")

cc_toolchain_config(name = "linux_x86_64_toolchain_config")

cc_toolchain(
    name = "linux_x86_64_toolchain",
    tool_map = ":tool_map",
    # all_files = ":empty",
    # compiler_files = ":empty",
    # dwp_files = ":empty",
    # linker_files = ":empty",
    # objcopy_files = ":empty",
    # strip_files = ":empty",
    # supports_param_files = 0,
    # toolchain_config = ":linux_x86_64_toolchain_config",
    # toolchain_identifier = "linux_x86_64-toolchain",
)

toolchain(
    name = "cc_toolchain_for_linux_x86_64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
