load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")
load("@rules_cc//cc/toolchains:toolchain.bzl", "cc_toolchain")

cc_tool(
    name = "clang",
    src = "@linux_x86_64_cc_tools//:clang-21",
)

cc_tool_map(
    name = "tools",
    tools = {
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":clang",
    },
    visibility = ["//visibility:private"],
)

cc_toolchain(
    name = "linux_x86_64_clang_toolchain",
    tool_map = ":tools",
)

toolchain(
    name = "linux_x86_64_toolchain",
    toolchain = ":linux_x86_64_clang_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
